--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -6,6 +6,15 @@
     width: 300px;
 }
 
+.little-text {
+    font-size: .75rem;
+}
+
+.error {
+    color: red;
+    align-self: flex-start;
+}
+
 button {
     width: 100%;
     margin-top: 25px;
