--- a/src/styles/Login-styles.css
+++ b/src/styles/Login-styles.css
@@ -1,9 +1,12 @@
+.body{
+    background-color: white;
+}
 .login-card {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-
     width: 300px;
+    
 }
 
 .little-text {
@@ -18,4 +21,16 @@
 button {
     width: 100%;
     margin-top: 25px;
+
+}
+.title{
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+.login-logo{
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    border-radius: 34px;
 }
