--- a/src/styles/Login-styles.css
+++ b/src/styles/Login-styles.css
@@ -1,36 +1,60 @@
-.body{
-    background-color: white;
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+:root{
+    background: linear-gradient(to right, #6a11cb, #2575fc);
+    color: white;
 }
 .login-card {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    width: 300px;
-    
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  width: 300px;
 }
 
 .little-text {
-    font-size: .75rem;
+  font-size: 0.75rem;
 }
 
 .error {
-    color: red;
-    align-self: flex-start;
+  color: red;
+  align-self: flex-start;
 }
 
-button {
-    width: 100%;
-    margin-top: 25px;
+.button-login {
+  width: 100%;
+  margin-top: 25px;
+  background: #6a11cb;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+.title {
+  font-size: 2rem;
+  margin-bottom: 20px;
+  color: #fff;
+  text-align: center;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+.login-logo {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  border-radius: 34px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
 
+.login-logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
 }
-.title{
-    font-size: 1.5rem;
-    margin-bottom: 10px;
-}
-.login-logo{
-    width: 100px;
-    height: 100px;
-    margin: 0 auto;
-    margin-bottom: 20px;
-    border-radius: 34px;
+
+.little-text{
+    margin-top: 20px;
 }
