--- a/src/Components/postFeed.css
+++ b/src/Components/postFeed.css
@@ -2,8 +2,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 16px;
+    padding-right: 16px;
     border-bottom: 1px solid #ddd;
     height: 30px;
 
@@ -13,11 +13,6 @@
     width: 30px;
     height: 30px;
     border-radius: 50%; /* Hace la imagen de perfil redonda */
-}
-
-.userInfo p {
-    font-weight: bold;
-    font-size: 14px;
 }
 
 .nomImgContainer{
@@ -40,9 +35,36 @@
     margin: 0;
     color: black;
     line-height: 27px;
+    font-weight: bold;
+    font-size: 14px;
 }
 
 #imgPost{
     width: 390px;
     height: 440px;
+}
+
+.interactionContainer{
+    padding-left: 16px;
+    gap: 10px;
+}
+
+.detailsItems{
+    height: 24px;
+    width:24px;
+}
+
+.descriptionContainer{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 8px;
+    padding-left: 16px;
+
+}
+
+
+#description{
+    color: black;
+    font-size: 14px;
 }
