voló el modo claro

--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -4,12 +4,12 @@
   padding: 2rem;
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  background-image: url("../assets/fonddo.jpg");
+  background-image: url("../Assets/fonddo.jpg");
   background-size: cover;
   border-radius: 15px;
 }
 :root {
-  background-image: url("../assets/descarga.jpg");
+  background-image: url("../Assets/descarga.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
